--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,11 @@ dropdown1{
 }
 
 #modal-login {
-    width: 400px;
+    max-width: 400px;
+    width: 95%;
     height: 300px;
     background-color: #FFF;
     border-radius: 2%;
-   
 }
 #loginUsuario{
     padding: 15px;
@@ -99,6 +99,10 @@ h1{
 
 ul li a{
     font-size: 17px;
+}
+#side-nav hr{
+    float: left;
+    
 }
 
 
