--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,84 @@
+@font-face {
+  font-family: 'crud-ajax';
+  src: url('../font/crud-ajax.eot?42572493');
+  src: url('../font/crud-ajax.eot?42572493#iefix') format('embedded-opentype'),
+       url('../font/crud-ajax.woff2?42572493') format('woff2'),
+       url('../font/crud-ajax.woff?42572493') format('woff'),
+       url('../font/crud-ajax.ttf?42572493') format('truetype'),
+       url('../font/crud-ajax.svg?42572493#crud-ajax') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'crud-ajax';
+    src: url('../font/crud-ajax.svg?42572493#crud-ajax') format('svg');
+  }
+}
+*/
+ 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "crud-ajax";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+ 
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+ 
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+ 
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+ 
+.icon-mail:before { content: '\e800'; } /* '' */
+.icon-youtube-play:before { content: '\f16a'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-whatsapp:before { content: '\f232'; } /* '' */
+.icon-facebook-squared:before { content: '\f308'; } /* '' */
+
 #menu{
-    background: -webkit-gradient(linear, left top, right top, from(#8abbea), to(#3C96EC)) no-repeat; background: -moz-linear-gradient(left, #8abbea, #3C96EC); filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=1, StartColorStr='#8abbea', EndColorStr='#3C96EC')
+    background: -webkit-gradient(linear, left top, right top, from(#8abbea), to(#3C96EC)) no-repeat; background: -moz-linear-gradient(left, #8abbea, #3C96EC); filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=1, Start orStr='#8abbea', EndColorStr='#3C96EC')
     opacity: 5.8;
     filter: alpha(opacity=50);
     height: 65px;
     padding-top: 16px;
     padding-bottom: 81px;
 }
+
 .brand-logo{
     padding: 2px 2px;
 }
+
 .brand-logo img{
     max-width: 256px;
     width: 100%;
 }
-    
-    
-    
+        
 div.slider ul.slides{
     height: 600px !important;
 }
@@ -31,12 +94,13 @@ div.slider {
 #conteudoTexto h1{
     text-align: center;
     font-size: 40px;
-    color:bl
+    color: #000000;
 
 }
 #conteudoTexto p{
     font-size: 20px;
     text-align: justify;
+    color: #222222;
     
 }
 .footer-copyright{
@@ -67,7 +131,7 @@ dropdown1{
 
 #modal-login {
     max-width: 400px;
-    width: 95%;
+    width: 90%;
     height: 300px;
     background-color: #FFF;
     border-radius: 2%;
@@ -82,7 +146,7 @@ header #menu .container li a:hover{
 }
 
 .page-footer{
-    background-color: #1889E6;
+    background-color: #3C96EC;
 }
 
 #sessaoCard a{
@@ -106,9 +170,39 @@ ul li a{
 }
 
 .slider .indicators .indicator-item.active{
-    background-color: #0d1771;
+    background-color: #3C96EC;
 }
 
+[class^="icon-"]:before, [class*=" icon-"]:before {
+    font-family: "crud-ajax";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: 12px;
+    text-align: center;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1em;
+    margin-left: .2em;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; 
+}
 
+.page-footer .footer-copyright{
+    background-color: #4286c7;
+}
+#form-contato{
+    margin: 80px 60px;
+    
+    
+}
+#form-contato-interno{
+    width: 80%;
+    margin-left: 0 60px !important;
+    padding: 20px;
+}
 
 
