--- a/css/style.css
+++ b/css/style.css
@@ -205,4 +205,44 @@ ul li a{
     padding: 20px;
 }
 
+#conteudosobrenos .sobre h1{
+    font-size: 50px;
+}
+
+.sobre{
+   margin: 80px 60px;
+}
+
+#conteudosobrenos .comentario .membros p{
+    font-size: 20px;
+}
+
+.comentario .membros img{
+	width: 70px;
+	float: left;
+	border-radius: 34px;
+    text-align: center;
+}
+
+.sobrealessandra, .sobrecristina, .sobreliandra, .sobreluan, .sobrewillian{
+    margin: 90px 70px;
+}
+
+#conteudosobrenos h1{
+    text-align: center;
+    font-size: 40px;
+    color: #000000;
+
+}
+
+#conteudosobrenos p{
+    font-size: 25px;
+    text-align: justify;
+    color: #222222; 
+}
+
+#conteudosobrenos .comentario .membros .imgalessandra{
+    margin: 30px 20px;
+}
+
 
