--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,14 @@
     padding-bottom: 81px;
 }
 
+.slider h3{
+     text-shadow:2px 2px #000000;
+}
+
+.card .card-image .card-title{
+    text-shadow:2px 2px #000000;
+}
+
 .brand-logo{
     padding: 2px 2px;
 }
