Adicionado plugins do luan

--- a/css/style.css
+++ b/css/style.css
@@ -359,3 +359,29 @@ ul li a{
     min-height: 150px;
 }
 
+
+#register .curta{
+    font-weight:bold;
+    color:#FF0000;
+    font-size:larger;
+    margin-left: 10px;
+    }
+    #register .fraca{
+    font-weight:bold;
+    color:orange;
+    font-size:larger;
+    margin-left: 10px;
+    }
+    #register .boa{
+    font-weight:bold;
+    color:#2D98F3;
+    font-size:larger;
+    margin-left: 10px;
+    }
+    #register .forte{
+    font-weight:bold;
+    color: limegreen;
+    font-size:larger;
+    margin-left: 10px;
+    }
+
