--- a/css/style.css
+++ b/css/style.css
@@ -383,5 +383,102 @@ ul li a{
     color: limegreen;
     font-size:larger;
     margin-left: 10px;
+}
+
+#perfil{
+    width: 80%;
+    margin: auto;
+}
+
+#perfil .perfiluser{
+    background-color: #f2f2f2;
+    width: 80%;
+    height: 400px;;
+    margin: auto;
+    margin-top: 150px;
+    margin-bottom: 150px;
+}
+
+#perfil .perfiluser .fotouser{
+    width: 200px;
+    height: 200px;
+    background-color: dodgerblue;
+    border-radius: 50%;
+    position: absolute;
+    top: 150px;
+    margin-left: 15px;
+}
+
+#perfil .perfiluser .fotouser img{
+    width: 100%;
+    background-image:url(../img/willian.jpg);
+    border-radius: 100%;
+}
+
+#perfil .perfiluser h3{
+    font-size: 38px;
+    margin-left: 20%;
+}
+
+@media screen and (max-width: 1200px){
+    #perfil .perfiluser{
+        background-color: #f2f2f2;
+        width: 80%;
+        height: 700px;
+        margin: auto;
+        margin-top: 150px;
+        margin-bottom: 150px;
+}
+    #perfil .perfiluser .dados2{
+        margin-left: 25%;
     }
+    
+   
+    
+    #perfil .perfiluser h3{
+        text-align: center;
+        margin-top: 120%;
+        margin-right: 25%;
+    }
+}
+    
+    
+    
+    #perfil .perfiluser .dados{
+        width: 80%;
+        margin: auto;
+}
+
+    #perfil .perfiluser h3{
+        margin-left: 26%;
+        padding-top: 5%;
+    }
+
+    
+    #perfil .perfiluser .dados1{
+        float: left;
+        margin-left: 26%;
+    }
+    
+    #perfil .perfiluser .dados2{
+        float: right;
+        margin-right: 20%;
+    }
+    
+    #perfil .perfiluser .dados1 h5{
+        color: #4a4a4a;
+    }
+    
+    #perfil .perfiluser .dados2 h5{
+        color: #4a4a4a;
+    }
+    
+    #perfil .perfiluser .dados1 p{
+        color: #888888;
+    }
+    
+    #perfil .perfiluser .dados2 p{
+        color: #888888;
+    }
+
 
