--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,7 @@ ul li a{
 #perfil{
     width: 80%;
     margin: auto; 
+    min-height: 500px;
 }
 
 #perfil .perfiluser{
@@ -394,10 +395,9 @@ ul li a{
 #perfil .perfiluser{
     background-color: #f2f2f2;
     width: 80%;
-    height: 400px;;
+    height: 420px;;
     margin: auto;
     margin-top: 150px;
-    margin-bottom: 150px;
 }
 
 #perfil .perfiluser .fotouser{
@@ -421,17 +421,34 @@ ul li a{
     margin-left: 20%;
 }
 
-@media screen and (max-width: 1200px){
-    #perfil .perfiluser{
-        background-color: #f2f2f2;
-        width: 80%;
-        height: 700px;
-        margin: auto;
-        margin-top: 150px;
-        margin-bottom: 150px;
-}
+    .row{
+            margin-left: 10%;
+            margin-bottom: 3%;
+        }
+    h4{
+            font-size: 20px;
+            margin-left: 10%;
+            margin-top: 3%;
+        }
+
+    @media screen and (max-width: 1200px){
+        #perfil .perfiluser{
+            background-color: #f2f2f2;
+            width: 80%;
+            height: 700px;
+            margin: auto;
+            margin-top: 150px;
+
+    }
+    .row{
+            margin-left: 10%;
+        }
+    h4{
+            font-size: 20px;
+            margin-left: 10%;
+        }
     #perfil .perfiluser .dados2{
-        margin-left: 25%;
+        margin-left: 35%;
     }
     
    
