--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,6 @@ div.slider {
 
 .sessao-campanhas{
     margin: 80px 60px;
-    min-height: 300px;
 }
 
 .sessao-campanhas a{
@@ -309,7 +308,6 @@ ul li a{
 #perfil{
     width: 80%;
     margin: auto; 
-    min-height: 500px;
 }
 
 #perfil .perfiluser{
@@ -395,9 +393,10 @@ ul li a{
 #perfil .perfiluser{
     background-color: #f2f2f2;
     width: 80%;
-    height: 420px;;
+    height: 400px;;
     margin: auto;
     margin-top: 150px;
+    margin-bottom: 150px;
 }
 
 #perfil .perfiluser .fotouser{
@@ -421,34 +420,17 @@ ul li a{
     margin-left: 20%;
 }
 
-    .row{
-            margin-left: 10%;
-            margin-bottom: 3%;
-        }
-    h4{
-            font-size: 20px;
-            margin-left: 10%;
-            margin-top: 3%;
-        }
-
-    @media screen and (max-width: 1200px){
-        #perfil .perfiluser{
-            background-color: #f2f2f2;
-            width: 80%;
-            height: 700px;
-            margin: auto;
-            margin-top: 150px;
-
-    }
-    .row{
-            margin-left: 10%;
-        }
-    h4{
-            font-size: 20px;
-            margin-left: 10%;
-        }
+@media screen and (max-width: 1200px){
+    #perfil .perfiluser{
+        background-color: #f2f2f2;
+        width: 80%;
+        height: 700px;
+        margin: auto;
+        margin-top: 150px;
+        margin-bottom: 150px;
+}
     #perfil .perfiluser .dados2{
-        margin-left: 35%;
+        margin-left: 25%;
     }
     
    
@@ -498,100 +480,29 @@ ul li a{
     #perfil .perfiluser .dados2 p{
         color: #888888;
     }
-#perfil-campanha{
-    width: 80%;
-    margin: auto;
-    min-height: 500px;
+#register .curta{
+    font-weight:bold;
+    color:#FF0000;
+    font-size:larger;
+    margin-left: 10px;
 }
-
-#perfil-campanha .perfilcamp{
-    background-color: #f2f2f2;
-    width: 80%;
-    min-height: 500px;
-    margin: auto;
-    margin-top: 150px;
-    margin-bottom: 15px;
-    padding: 20px 0;
+#register .fraca{
+    font-weight:bold;
+    color:orange;
+    font-size:larger;
+    margin-left: 10px;
 }
-
-#perfil-campanha .perfilcamp .fotocamp{
-    width: 200px;
-    height: 200px;
-    background-color: dodgerblue;
-    border-radius: 50%;
-    position: absolute;
-    top: 150px;
-    margin-left: 15px;
+#register .boa{
+    font-weight:bold;
+    color:#2D98F3;
+    font-size:larger;
+    margin-left: 10px;
 }
-
-#perfil-campanha .perfilcamp .fotocamp img{
-    width: 100%;
-    background-image:url(../img/willian.jpg);
-    border-radius: 100%;
-}
-
-#perfil-campanha .perfilcamp h3{
-    font-size: 38px;
-    margin-left: 20%;
-}
-
-    #perfil-campanha .perfilcamp h2{
-        font-size:30px;
-    }
-
-@media screen and (max-width: 1200px){
-    #perfil-campanha .perfilcamp{
-        background-color: #f2f2f2;
-        width: 80%;
-        max-height: 1050px;
-        margin: auto;
-        margin-top: 150px;
-        margin-bottom: 150px;
-}
-    
-    #perfil-campanha .perfilcamp h3{
-        text-align: center;
-        margin-top: 120%;
-        margin-right: 25%;
-        
-    }
-    
-    #perfil-campanha p{
-        text-align: center;
-        margin-left: 30px;
-    }
-    
-    #perfil-campanha h5{
-        text-align: justify;
-    }
-}
-    
-#perfil-campanha .perfilcamp h3{
-    margin-left: 27%;
-    padding-top: 40px;
-}
-
-#perfil-campanha .perfilcamp h2{
-    margin-left: 27%;
-}
-
-#perfil-campanha .perfilcamp h5{
-    margin-left: 27%;
-    font-size: 28px;
-}
-
-#perfil-campanha .perfilcamp p{
-    margin-left: 27%;
-    padding-right: 50px;
-    text-align: justify;
-}
-.camp-comentarios{
-    background-color: #f2f2f2;
-    width: 80%;
-    min-height: 500px;
-    margin: auto;
-    margin-bottom: 150px;
-    padding: 20px 40px ;
+#register .forte{
+    font-weight:bold;
+    color: limegreen;
+    font-size:larger;
+    margin-left: 10px;
 }
 
 
