--- a/css/style.css
+++ b/css/style.css
@@ -508,9 +508,7 @@ ul li a{
     height: 100px;
     margin: auto;
     margin-bottom: 20px;
-    padding: 5px 10px;
-    
-    
+    padding: 5px 10px; 
 }
 
-
+/*página campanha*/
