--- a/css/style.css
+++ b/css/style.css
@@ -514,4 +514,30 @@ ul li a{
     padding: 5px 10px; 
 }
 
+
+
+#register .curta{
+font-weight:bold;
+color:#FF0000;
+font-size:larger;
+margin-left: 10px;
+}
+#register .fraca{
+font-weight:bold;
+color:orange;
+font-size:larger;
+margin-left: 10px;
+}
+#register .boa{
+font-weight:bold;
+color:#2D98F3;
+font-size:larger;
+margin-left: 10px;
+}
+#register .forte{
+font-weight:bold;
+color: limegreen;
+font-size:larger;
+margin-left: 10px;
+}
 /*página campanha*/
