--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4836,6 +4836,7 @@ small {
 }
 
 .card .card-image img {
+  object-fit: cover;
   display: block;
   border-radius: 2px 2px 0 0;
   position: relative;
@@ -4843,7 +4844,8 @@ small {
   right: 0;
   top: 0;
   bottom: 0;
-  width: 100%;
+  height: 15rem;
+  width: 50rem;
   max-width: 100%;
   
     
