--- a/css/style.css
+++ b/css/style.css
@@ -814,3 +814,25 @@ margin-left: 10px;
     margin-bottom: 150px;
     padding: 20px 40px ;
 }
+#containerBody{
+	position:absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left:0px;
+	background-color: #eee;
+	display: block;
+}
+div#loader{
+    z-index: 999;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left:0px;
+	background-color: #FFF;
+	background-image: url('../img/load.gif');
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
