--- a/css/style.css
+++ b/css/style.css
@@ -836,3 +836,24 @@ div#loader{
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+#subirTopo {
+text-decoration: none;
+background: rgba(30,156,161,.9);
+bottom: 40px;
+right: 30px;
+color: #fff;
+text-align: center;
+cursor: pointer;
+padding: 15px;
+font-size: 15px;
+font-weight: bold;
+text-transform: uppercase;
+position: fixed;
+border: 0;
+font-family: sans-serif;
+opacity: .8;
+}
+
+#subirTopo:hover {
+opacity:1;
+}
