--- a/css/style.css
+++ b/css/style.css
@@ -913,3 +913,22 @@ opacity:1;
 }
 
 .close:hover { background: #00d9ff; }
+.maquinaDeEscrever:after{
+    content: '|';
+    margin-left: 5px;
+    opacity: 1;
+    animation pisca .7s infinite;
+
+}  
+@keyframes pisca{
+    0%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+
+}
