--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,14 @@
 @font-face {
   font-family: 'crud-ajax';
-  src: url('../font/crud-ajax.eot?42572493');
-  src: url('../font/crud-ajax.eot?42572493#iefix') format('embedded-opentype'),
-       url('../font/crud-ajax.woff2?42572493') format('woff2'),
-       url('../font/crud-ajax.woff?42572493') format('woff'),
-       url('../font/crud-ajax.ttf?42572493') format('truetype'),
-       url('../font/crud-ajax.svg?42572493#crud-ajax') format('svg');
+  src: url('../font/crud-ajax.eot?55208578');
+  src: url('../font/crud-ajax.eot?55208578#iefix') format('embedded-opentype'),
+       url('../font/crud-ajax.woff2?55208578') format('woff2'),
+       url('../font/crud-ajax.woff?55208578') format('woff'),
+       url('../font/crud-ajax.ttf?55208578') format('truetype'),
+       url('../font/crud-ajax.svg?55208578#crud-ajax') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-/*
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'crud-ajax';
-    src: url('../font/crud-ajax.svg?42572493#crud-ajax') format('svg');
-  }
-}
-*/
- 
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "crud-ajax";
   font-style: normal;
@@ -31,29 +20,15 @@
   width: 1em;
   margin-right: .2em;
   text-align: center;
-  /* opacity: .8; */
- 
-  /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
- 
-  /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
   margin-left: .2em;
- 
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
-  /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
+.icon-excluir:before { content: '\e800'; }
+.icon-editar:before { content: '\e801'; }
  
 .icon-mail:before { content: '\e800'; } /* '' */
 .icon-youtube-play:before { content: '\f16a'; } /* '' */
@@ -932,3 +907,16 @@ opacity:1;
     }
 
 }
+
+
+.icon-excluir{
+    float: right;
+	color: #d40909;
+	cursor: pointer;
+}
+.icon-editar{
+	float: right;
+	cursor: pointer;
+	margin: 0 10px 0 0;
+}
+
