--- a/css/style.css
+++ b/css/style.css
@@ -920,3 +920,17 @@ opacity:1;
 	margin: 0 10px 0 0;
 }
 
+.editavel{
+	border-radius: 10px;
+	border: 1px solid #CCC;
+	padding: 5px;
+}
+.salvar{
+    float: right;
+	display: block;
+	margin: 2px 0 10px 0;
+	color: #488cbd;
+	text-decoration: none;
+	font-weight: bold;
+}
+
