--- a/css/style.css
+++ b/css/style.css
@@ -948,13 +948,13 @@ opacity:1;
 }
 
 .pace .pace-progress {
-  background: #061d6f;
+  background: #2147ce;
   position: fixed;
   z-index: 2000;
   top: 0;
   right: 100%;
   width: 100%;
-  height: 2px;
+  height: 3px;
 }
 
 
